# viz_pkg

./: CMakeLists.txt  README.md  package.xml
config/: plane_config.yaml
launch/: plane_visualizer.launch  two_scripts.launch
modol/: 3dcp_ws.stl
rviz/: plane_visualization.rviz
scripts/: clear_env.py  list_models.py  plane_visualizer.py  send_position.py  viz_obj.py
src/: __init__.py  collision_obj.py  mesh_loader.py  obj_loader.py  rviz_marker.py
