<?xml version="1.0"?>
<package format="2">
  <name>viz_pkg</name>
  <version>0.0.1</version>
  <description>Simple ROS package for displaying planes in rviz</description>

  <maintainer email="user@example.com">ROS Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
  </export>
</package>
